<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:orientation="horizontal"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_marginBottom="3dp"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        android:background="@drawable/cari"
        android:orientation="horizontal"
        android:padding="10dp">

    <ImageView
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:id="@+id/imgskripsi"
        android:src="@drawable/logo"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
         />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/nim"
        android:id="@+id/nimmhs"
        android:layout_marginLeft="0dp"
        android:layout_alignStart="@+id/jdlmhs"
        android:layout_below="@+id/namamhs" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/nama"
        android:id="@+id/namamhs"
        android:textColor="@color/colorAccent"
        android:layout_marginLeft="0dp"

        android:layout_below="@+id/jdlmhs"
        android:layout_alignStart="@+id/jdlmhs" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/skripsi"
        android:id="@+id/jdlmhs"
        android:layout_marginLeft="5dp"
        android:textColor="#666"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/imgskripsi"
        android:layout_marginStart="12dp" />


</RelativeLayout>
</RelativeLayout>