<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/abu"
    tools:context="com.subayu.agus.katalog.Menuu">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_height="wrap_content">
            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/cv_main"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                card_view:cardBackgroundColor="@color/putih"
                card_view:cardCornerRadius="7dp"
                card_view:cardElevation="1.5dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <ImageView
                        android:id="@+id/menu1"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:src="@drawable/agenda" />

                    <TextView
                        android:layout_width="match_parent"
                        android:textAlignment="center"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/menu1"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:text="@string/menu1"
                        android:textColor="#000"
                        android:textStyle="bold" />
                </RelativeLayout>

            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/cv_main2"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                card_view:cardBackgroundColor="@color/putih"
                card_view:cardCornerRadius="7dp"
                card_view:cardElevation="1.5dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <ImageView
                        android:id="@+id/menu2"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:src="@drawable/passport" />

                    <TextView
                        android:textColor="#000"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/menu2"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:textAlignment="center"
                        android:text="@string/menu2"
                        android:textStyle="bold" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/cv_main3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                card_view:cardBackgroundColor="@color/putih"
                card_view:cardCornerRadius="7dp"
                card_view:cardElevation="1.5dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <ImageView
                        android:id="@+id/menu3"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:src="@drawable/upload" />

                    <TextView
                        android:textColor="#000"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:layout_below="@+id/menu3"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:text="@string/menu3"
                        android:textStyle="bold" />
                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/cv_main4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                card_view:cardBackgroundColor="@color/putih"
                card_view:cardCornerRadius="7dp"
                card_view:cardElevation="1.5dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <ImageView
                        android:id="@+id/menu4"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:src="@drawable/mortarboard" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/menu4"
                        android:textAlignment="center"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:textColor="#000"
                        android:text="@string/menu4"
                        android:textStyle="bold" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/pagemenu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="46dp">

    </LinearLayout>
</RelativeLayout>
